--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -9,6 +9,8 @@
     <meta name="description" content="{{description}}" />
     {% endif %} {% block head %}{% endblock %}
     <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
+    <link rel="icon" href="../static/img/favicon.ico" type="image/x-icon" />
+
     {% if prism == true %}
     <link
       rel="stylesheet"
