--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -7,11 +7,12 @@ prism: true
   <div class="pb-5 mb-5 border-b border-gray-100">
     <h1 class="font-bold text-5xl">{{title}}</h1>
     <p class="text-center text-base leading-6 font-medium text-gray-500">
-      <time>
-        {{ date | readableDate }} by
-        <a>{{ author }}</a>
-      </time>
+      <time> {{ date | readableDate }} </time>
     </p>
+    <p class="text-center mt-2">{{description}}</p>
   </div>
-  <article class="prose lg:prose-xl my-4 mx-auto">{{ content | safe }}</article>
+  <div class="mt-2 flex justify-center items-center">
+    <img src="/static/img/hero-background.jpg" alt="" class="mx-auto" />
+    <p>{{details}}</p>
+  </div>
 </div>
