--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -3,6 +3,11 @@
 @tailwind utilities;
 
 /*Your Custom CSS Goes here*/
+@layer base {
+  body {
+    @apply lg:mt-28; /* Adjust this value to match your navbar height */
+  }
+}
 
 h1 {
   @apply text-4xl tracking-tighter mb-3 text-center lg:text-7xl;
