--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -3,16 +3,16 @@ layout: default
 prism: true
 ---
 
-<div class="container max-w-4xl mt-6 px-6">
-  <div class="pb-5 mb-5 border-b border-gray-100">
+<div class="container max-w-5xl mt-6 px-6">
+  <div class="pb-5 mb-0 border-b border-gray-100">
     <h1 class="font-bold text-5xl">{{title}}</h1>
     <p class="text-center text-base leading-6 font-medium text-gray-500">
       <time> {{ date | readableDate }} </time>
     </p>
     <p class="text-center mt-2">{{description}}</p>
   </div>
-  <div class="mt-2 flex justify-center items-center">
-    <img src="/static/img/hero-background.jpg" alt="" class="mx-auto" />
-    <p>{{details}}</p>
+  <div class="mt-2 flex flex-col lg:flex-row justify-center items-center">
+    <img src="{{image}}" alt="{{title}}" class="mx-auto lg:w-1/2 lg:mr-4" />
+    <p class="lg:w-1/2 text-left lg:text-left">{{details}}</p>
   </div>
 </div>
