--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -1,12 +1,13 @@
-<div class="lg:fixed top-0 w-full bg-white z-20">
+<div class="lg:fixed top-0 w-full bg-white z-20 shadow-md">
   <nav
     class="flex items-center justify-center lg:justify-between flex-wrap p-4 lg:px-0 container mx-auto bg-white"
     x-data="{ isOpen: false }"
     @keydown.escape="isOpen = false"
     @click.away="isOpen = false"
   >
-    <!-- Logo -->
-    <div class="flex items-center">
+    <!-- Logo and Phone Number -->
+    <div class="flex items-center space-x-8">
+      <!-- Logo -->
       <a href="/">
         <img
           src="../../static/img/schaefer-auto1.png"
@@ -14,6 +15,15 @@
           class="h-16 lg:h-20"
         />
       </a>
+      <!-- Phone Number -->
+      <div class="lg:block">
+        <p class="text-lg text-gray-700">
+          Contact Us:
+          <a href="tel:5555555555" class="hover:text-[#1E6CB0] font-bold">
+            (555) 555-5555
+          </a>
+        </p>
+      </div>
     </div>
 
     <!-- Toggle button (hidden on large screens) -->
@@ -59,7 +69,7 @@
           <!-- Last item as a button -->
           <a
             @click="isOpen = false"
-            class="inline-block bg-indigo-500 text-white font-bold py-2 px-4 rounded hover:bg-indigo-600"
+            class="inline-block bg-[#1E6CB0] text-white font-bold py-2 px-4 rounded hover:bg-[#155789]"
             href="{{ item.url }}"
           >
             {{ item.text }}
@@ -67,7 +77,7 @@
           {% else %}
           <a
             @click="isOpen = false"
-            class="text-ml inline-block no-underline py-2 px-4 hover:text-indigo-500 {% if item.url == current_url %}text-indigo-500 font-bold{% else %}text-gray-500{% endif %}"
+            class="text-ml inline-block no-underline py-2 px-4 hover:text-[#1E6CB0] {% if item.url == current_url %}text-[#1E6CB0] font-bold{% else %}text-gray-500{% endif %}"
             href="{{ item.url }}"
           >
             {{ item.text }}
