--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -11,7 +11,11 @@
 }
 
 h1 {
-  @apply text-4xl tracking-tighter mb-3 text-center lg:text-7xl;
+  @apply text-4xl md:text-6xl tracking-tighter mb-3 text-center lg:text-7xl font-bold;
+}
+
+h2 {
+  @apply text-2xl md:text-4xl font-bold;
 }
 
 h3 {
