--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -17,7 +17,7 @@
       </a>
       <!-- Phone Number -->
       <div class="lg:block">
-        <p class="text-lg text-gray-700">
+        <p class="text-md text-gray-700">
           Contact Us:
           <a href="tel:5555555555" class="hover:text-[#1E6CB0] font-bold">
             (555) 555-5555
