--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -1,6 +1,6 @@
 <div class="lg:fixed top-0 w-full bg-white z-20 shadow-md">
   <nav
-    class="flex items-center justify-center lg:justify-between flex-wrap p-4 lg:px-0 container mx-auto bg-white"
+    class="flex items-center justify-center lg:justify-between flex-wrap p-4 px-4 mx-auto bg-white"
     x-data="{ isOpen: false }"
     @keydown.escape="isOpen = false"
     @click.away="isOpen = false"
