--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-prism: true
 ---
 
-<div class="container max-w-5xl mt-6 px-6">
+<div class="container mt-6 px-6">
   <div class="pb-5 mb-0 border-b border-gray-100">
     <h1 class="font-bold text-5xl">{{title}}</h1>
     <p class="text-center text-base leading-6 font-medium text-gray-500">
