--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -2,16 +2,43 @@
 layout: default
 ---
 
-<div class="container mt-6 px-6">
-  <div class="pb-5 mb-0 border-b border-gray-100">
-    <h1 class="font-bold text-5xl">{{title}}</h1>
-    <p class="text-center text-base leading-6 font-medium text-gray-500">
-      <time> {{ date | readableDate }} </time>
-    </p>
-    <p class="text-center mt-2">{{description}}</p>
+<!-- Main Container -->
+<div class="container mx-auto px-4 py-8">
+  <!-- Top Section with Title -->
+  <div class="flex justify-center mb-4">
+    <h1 class="text-center">{{title}}</h1>
   </div>
-  <div class="mt-2 flex flex-col lg:flex-row justify-center items-center">
-    <img src="{{image}}" alt="{{title}}" class="mx-auto lg:w-1/2 lg:mr-4" />
-    <p class="lg:w-1/2 text-left lg:text-left">{{details}}</p>
+
+  <!-- Price and Miles Section -->
+  <div class="flex justify-center items-center mb-4">
+    <div class="text-center mr-8">
+      <span class="text-xl font-semibold">Price: ${{price}}</span>
+    </div>
+    <div class="border-l-2 h-6"></div>
+    <div class="text-center ml-8">
+      <span class="text-xl font-semibold">Miles: {{miles}}</span>
+    </div>
+  </div>
+
+  <!-- Date Section -->
+  <div class="flex justify-center mb-4">
+    <p class="text-lg text-center">{{date}}</p>
+  </div>
+
+  <!-- Line Separator -->
+  <div class="border-t-2 mb-16 md:w-3/4 sm:w-full mx-auto"></div>
+
+  <!-- Image and Description Section -->
+  <div class="flex flex-col md:flex-row items-center">
+    <div class="md:w-1/2 mb-4 md:mb-0">
+      <img
+        src="{{image}}"
+        alt="Product Image"
+        class="w-full h-96 rounded-lg shadow-md object-contain"
+      />
+    </div>
+    <div class="md:w-1/2 md:ml-8">
+      <p class="text-lg">{{description}}</p>
+    </div>
   </div>
 </div>
