--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -26,18 +26,18 @@ layout: default
   </div>
 
   <!-- Line Separator -->
-  <div class="border-t-2 mb-16 md:w-3/4 sm:w-full mx-auto"></div>
+  <div class="border-t-2 mb-8 md:w-3/4 sm:w-full mx-auto"></div>
 
   <!-- Image and Description Section -->
-  <div class="flex flex-col md:flex-row items-center">
-    <div class="md:w-1/2 mb-4 md:mb-0">
+  <div class="flex flex-col md:flex-row items-center md:mx-12">
+    <div class="lg:w-1/3 md:w-1/2 mb-4 md:mb-0">
       <img
         src="{{image}}"
         alt="Product Image"
-        class="w-full h-96 rounded-lg shadow-md object-contain"
+        class="w-full h-96 rounded-lg object-cover"
       />
     </div>
-    <div class="md:w-1/2 md:ml-8">
+    <div class="lg:w-2/3 md:w-1/2 md:ml-8">
       <p class="text-lg">{{description}}</p>
     </div>
   </div>
