--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -22,7 +22,7 @@ layout: default
 
   <!-- Date Section -->
   <div class="flex justify-center mb-4">
-    <p class="text-lg text-center">{{date}}</p>
+    <p>{{date | readableDate}}</p>
   </div>
 
   <!-- Line Separator -->
