--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -11,15 +11,15 @@
 }
 
 h1 {
-  @apply text-4xl md:text-5xl tracking-tighter mb-3 text-center lg:text-6xl font-bold;
+  @apply text-4xl md:text-5xl tracking-tighter mb-3 text-center lg:text-6xl font-bold text-[#1E6CB0];
 }
 
 h2 {
-  @apply text-2xl md:text-4xl font-bold;
+  @apply text-3xl md:text-4xl font-bold text-[#1E6CB0];
 }
 
 h3 {
-  @apply text-2xl font-bold mb-3;
+  @apply text-2xl font-bold mb-3 text-[#1E6CB0];
 }
 
 /* Syntax Highlighting*/
