--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -44,17 +44,18 @@ layout: default
 </div>
 
 <!-- Contact Section -->
-<section class="my-12 bg-white">
+<section class="lg:mt-8 bg-white">
   <div
     class="container mx-auto px-6 py-8 grid grid-cols-1 md:grid-cols-2 gap-12"
   >
     <!-- Left Side: Contact Info -->
     <div class="flex flex-col">
-      <h2 class="mb-4">Contact Us Today</h2>
+      <h2 class="mb-4">Interested in this vehicle?</h2>
       <p class="text-gray-600 mb-8">
-        Have questions or looking for your next vehicle? Reach out to us
-        directly or fill out the form. Our team is here to help you find the
-        perfect car!
+        {{title}} is available to purchase! If you're interested in buying this
+        vehicle, feel free to reach out to us via email, give us a call, or
+        simply fill out the form and we will be in contact with you. We're here
+        to assist you every step of the way.
       </p>
       <div class="space-y-6">
         <div>
