--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -6,7 +6,7 @@ layout: default
 <div class="container mx-auto px-4 py-8">
   <!-- Top Section with Title -->
   <div class="flex justify-center mb-4">
-    <h1 class="text-center">{{title}}</h1>
+    <h1 class="text-center text-black">{{title}}</h1>
   </div>
 
   <!-- Price and Miles Section -->
@@ -26,7 +26,9 @@ layout: default
   </div>
 
   <!-- Line Separator -->
-  <div class="border-t-2 mb-8 md:w-3/4 sm:w-full mx-auto"></div>
+  <div
+    class="border-t-2 mb-8 md:w-3/4 sm:w-full mx-auto border-[#1E6CB0]"
+  ></div>
 
   <!-- Image and Description Section -->
   <div class="flex flex-col md:flex-row items-center md:mx-12">
