vehicle partial added

--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{{title}}</title>
-    {% if description %}
+    {% if path != "home" %}
+    <title>{{ title }} - Schaefer Auto</title>
+    {% else %}
+    <title>Schaefer Auto</title>
+    {% endif %} {% if description %}
     <meta name="description" content="{{description}}" />
     {% endif %} {% block head %}{% endblock %}
     <link rel="stylesheet" type="text/css" href="/static/css/style.css" />
