--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="bg-[#1E6CB0] text-white py-6">
   <div
-    class="container mx-auto px-6 flex flex-col md:flex-row space-y-6 md:space-y-0 mb-12"
+    class="container mx-auto px-6 flex flex-col md:flex-row space-y-6 md:space-y-0 mb-8"
   >
     <!-- Logo and Text -->
     <div class="flex flex-col items-start md:w-1/3 space-y-2">
@@ -11,29 +11,38 @@
       />
       <p class="text-white">
         Your trusted auto dealer since 2021. Quality vehicles and exceptional
-        service.
+        service. Your trusted auto dealer since 2021. Quality vehicles and
+        exceptional service. Your trusted auto dealer since 2021. Quality
+        vehicles and exceptional service.
       </p>
     </div>
 
     <!-- Links and Contact -->
-    <div class="flex-1">
-      <!-- Top Row -->
-      <div class="flex items-center space-x-12 mb-4 flex-wrap justify-end">
-        <a href="../../vehicles/index.html" class="hover:underline">Vehicles</a>
-        <a href="../../services/index.html" class="hover:underline">Services</a>
-        <a href="../../testimonials/index.html" class="hover:underline"
-          >Testimonials</a
+    <div class="flex-1 flex-wrap flex-col md:items-end md:text-right space-y-4">
+      <!-- Navigation Links -->
+      <div
+        class="flex flex-wrap md:flex-row items-start md:justify-end space-x-2 space-y-0 md:space-x-8"
+      >
+        {% if navigation.items %} {% for item in navigation.items %}
+        <a
+          href="{{ item.url }}"
+          class="hover:underline {% if item.url == current_url %}font-bold{% endif %}"
         >
-        <a href="../../about/index.html" class="hover:underline">About</a>
-        <a href="../../contact/index.html" class="hover:underline">Contact</a>
+          {{ item.text }}
+        </a>
+        {% endfor %} {% endif %}
       </div>
 
       <!-- Bottom Row -->
-      <div class="flex items-center space-x-12 flex-wrap justify-end">
-        <p>(555) 555-5555</p>
-        <p>&copy; 2024 Schaefer Auto</p>
-        <p>Made by Kaleb Weston</p>
-        <a href="#privacy-policy" class="hover:underline">Privacy Policy</a>
+      <div
+        class="flex flex-wrap md:flex-row items-start md:justify-end space-y-2 md:space-y-0 space-x-0 md:space-x-8"
+      >
+        <p class="w-full md:w-auto">(555) 555-5555</p>
+        <p class="w-full md:w-auto">&copy; 2024 Schaefer Auto</p>
+        <p class="w-full md:w-auto">Made by Kaleb Weston</p>
+        <a href="#privacy-policy" class="hover:underline w-full md:w-auto"
+          >Privacy Policy</a
+        >
       </div>
     </div>
   </div>
