--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -26,6 +26,10 @@ h4 {
   @apply text-lg font-bold mb-3 text-gray-500;
 }
 
+h5 {
+  @apply text-lg font-medium mb-3 text-[#1E6CB0];
+}
+
 p {
   @apply text-gray-500;
 }
