--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -1,6 +1,6 @@
 <footer class="bg-[#1E6CB0] text-white py-6">
   <div
-    class="container mx-auto px-6 flex flex-col md:flex-row space-y-6 md:space-y-0 mb-8"
+    class="mx-auto px-6 flex flex-col md:flex-row space-y-6 md:space-y-0 mb-8 gap-8"
   >
     <!-- Logo and Text -->
     <div class="flex flex-col items-start md:w-1/3 space-y-2">
@@ -21,7 +21,7 @@
     <div class="flex-1 flex-wrap flex-col md:items-end md:text-right space-y-4">
       <!-- Navigation Links -->
       <div
-        class="flex flex-wrap md:flex-row items-start md:justify-end space-x-2 space-y-0 md:space-x-8"
+        class="flex flex-wrap md:flex-row items-start md:justify-end gap-x-8 space-y-0"
       >
         {% if navigation.items %} {% for item in navigation.items %}
         <a
@@ -35,11 +35,13 @@
 
       <!-- Bottom Row -->
       <div
-        class="flex flex-wrap md:flex-row items-start md:justify-end space-y-2 md:space-y-0 space-x-0 md:space-x-8"
+        class="flex flex-wrap md:flex-row items-start md:justify-end gap-x-8 space-y-0"
       >
-        <p class="w-full md:w-auto">(555) 555-5555</p>
-        <p class="w-full md:w-auto">&copy; 2024 Schaefer Auto</p>
-        <p class="w-full md:w-auto">Made by Kaleb Weston</p>
+        <p class="text-white">(555) 555-5555</p>
+        <p class="text-white">&copy; 2024 Schaefer Auto</p>
+        <p class="text-white">
+          Created by <a href="#" class="hover:underline">Kaleb Weston</a>
+        </p>
         <a href="#privacy-policy" class="hover:underline w-full md:w-auto"
           >Privacy Policy</a
         >
