--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -10,10 +10,9 @@
         class="w-36 h-auto mb-2"
       />
       <p class="text-white">
-        Your trusted auto dealer since 2021. Quality vehicles and exceptional
-        service. Your trusted auto dealer since 2021. Quality vehicles and
-        exceptional service. Your trusted auto dealer since 2021. Quality
-        vehicles and exceptional service.
+        Your trusted auto dealer since 2021. Located in Lomira, Wisconsin, we’re
+        dedicated to helping you drive away in the ideal vehicle at a price that
+        fits your budget.
       </p>
     </div>
 
