--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -22,6 +22,7 @@
     {% include "./partials/navbar.html" %} {{ content | safe }} {% include
     "./partials/footer.html" %}
 
+    <script src="/static/js/index.js"></script>
     <script src="/static/js/alpine.js"></script>
 
     {% if path == "home" %}
