--- a/src/_includes/partials/vehicle-section.html
+++ b/src/_includes/partials/vehicle-section.html
@@ -30,7 +30,10 @@
     </p>
     {% endif %}
     <p>
-      <a href="{{ post.url | url }}" class="text-[#1E6CB0] font-bold text-lg">
+      <a
+        href="{{ post.url | url }}"
+        class="text-[#1E6CB0] font-bold text-lg hover:text-[#155789]"
+      >
         See Details →
       </a>
     </p>
