--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -147,7 +147,7 @@ layout: default
           <div class="text-center mt-4">
             <button
               type="submit"
-              class="px-8 py-4 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-blue-600"
+              class="px-8 py-4 bg-[#1E6CB0] text-white font-semibold rounded-lg hover:bg-[#155789]"
             >
               Send Message
             </button>
