--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -4,11 +4,13 @@
   >
     <!-- Logo and Text -->
     <div class="flex flex-col items-start md:w-1/3 space-y-2">
-      <img
-        src="../../static/img/logos/schaefer-auto-white.png"
-        alt="Schaefer Auto Logo"
-        class="w-36 h-auto mb-2"
-      />
+      <a href="/">
+        <img
+          src="../../static/img/logos/schaefer-auto-white.png"
+          alt="Schaefer Auto Logo"
+          class="w-36 h-auto mb-2"
+        />
+      </a>
       <p class="text-white">
         Your trusted auto dealer since 2021. Located in Lomira, Wisconsin, we’re
         dedicated to helping you drive away in the ideal vehicle at a price that
