--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -45,6 +45,24 @@ layout: default
   </div>
 </div>
 
+<div class="flex justify-center flex-wrap">
+  <img
+    src="{{image1}}"
+    alt="Product image"
+    class="w-96 h-96 rounded-lg object-cover"
+  />
+  <img
+    src="{{image2}}"
+    alt="Product image"
+    class="w-96 h-96 rounded-lg object-cover"
+  />
+  <img
+    src="{{image3}}"
+    alt="Product image"
+    class="w-96 h-96 rounded-lg object-cover"
+  />
+</div>
+
 <!-- Contact Section -->
 <section class="lg:mt-8 bg-white">
   <div
