--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -31,36 +31,40 @@ layout: default
   ></div>
 
   <!-- Image and Description Section -->
-  <div class="flex flex-col md:flex-row items-center md:mx-12">
-    <div class="lg:w-1/3 md:w-1/2 mb-4 md:mb-0">
+  <div class="flex flex-col md:flex-row items-center">
+    <div class="lg:w-1/3 md:w-1/2 mb-4 md:mb-0 flex-grow">
       <img
         src="{{image}}"
         alt="Product Image"
         class="w-full h-96 rounded-lg object-cover"
       />
     </div>
-    <div class="lg:w-2/3 md:w-1/2 md:ml-8">
+    <div class="lg:w-2/3 md:w-1/2 md:ml-8 flex-grow">
       <p class="text-lg">{{description}}</p>
     </div>
   </div>
-</div>
 
-<div class="flex justify-center flex-wrap">
-  <img
-    src="{{image1}}"
-    alt="Product image"
-    class="w-96 h-96 rounded-lg object-cover"
-  />
-  <img
-    src="{{image2}}"
-    alt="Product image"
-    class="w-96 h-96 rounded-lg object-cover"
-  />
-  <img
-    src="{{image3}}"
-    alt="Product image"
-    class="w-96 h-96 rounded-lg object-cover"
-  />
+  <div class="flex justify-center flex-wrap mt-16 gap-4">
+    {% if image1 %}
+    <img
+      src="{{ image1 }}"
+      alt="Product image"
+      class="w-96 h-48 rounded-lg object-cover flex-grow"
+    />
+    {% endif %} {% if image2 %}
+    <img
+      src="{{ image2 }}"
+      alt="Product image"
+      class="w-96 h-48 rounded-lg object-cover flex-grow"
+    />
+    {% endif %} {% if image3 %}
+    <img
+      src="{{ image3 }}"
+      alt="Product image"
+      class="w-96 h-48 rounded-lg object-cover flex-grow"
+    />
+    {% endif %}
+  </div>
 </div>
 
 <!-- Contact Section -->
