vehicle page styles

--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -68,7 +68,7 @@ layout: default
 </div>
 
 <!-- Contact Section -->
-<section class="lg:mt-8 bg-white">
+<section class="lg:mt-8 mb-12 bg-white">
   <div
     class="container mx-auto px-6 py-8 grid grid-cols-1 md:grid-cols-2 gap-12"
   >
