--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -41,9 +41,15 @@
         <p class="text-white">(555) 555-5555</p>
         <p class="text-white">&copy; 2024 Schaefer Auto</p>
         <p class="text-white">
-          Created by <a href="#" class="hover:underline">Kaleb Weston</a>
+          Created by
+          <a
+            href="https://weston-portfolio.netlify.app/"
+            class="hover:underline"
+            target="_blank"
+            >Kaleb Weston</a
+          >
         </p>
-        <a href="#privacy-policy" class="hover:underline w-full md:w-auto"
+        <a href="/privacy-policy" class="hover:underline w-full md:w-auto"
           >Privacy Policy</a
         >
       </div>
