--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -69,7 +69,7 @@
           <!-- Last item as a button -->
           <a
             @click="isOpen = false"
-            class="inline-block bg-[#1E6CB0] text-white font-bold py-2 px-4 rounded hover:bg-[#155789]"
+            class="inline-block bg-[#1E6CB0] text-white font-bold py-3 px-6 rounded-lg hover:bg-[#155789]"
             href="{{ item.url }}"
           >
             {{ item.text }}
