--- a/src/_includes/partials/footer.html
+++ b/src/_includes/partials/footer.html
@@ -38,10 +38,12 @@
       <div
         class="flex flex-wrap md:flex-row items-start md:justify-end gap-x-8 space-y-0"
       >
-        <p class="text-white">(555) 555-5555</p>
+        <p class="text-white"> <a href="tel:9205399846" class="hover:underline">
+          (920) 539-9846
+        </a></p>
         <p class="text-white">&copy; 2024 Schaefer Auto</p>
         <p class="text-white">
-          Created by
+          Developed by
           <a
             href="https://weston-portfolio.netlify.app/"
             class="hover:underline"
