data collection google

--- a/src/_includes/default.html
+++ b/src/_includes/default.html
@@ -17,6 +17,15 @@
       href="../static/img/logos/schaefer-auto-favicon.png"
       type="image/x-icon"
     />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZTHM86HXHF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZTHM86HXHF');
+</script>
   </head>
   <body>
     {% include "./partials/navbar.html" %} {{ content | safe }} {% include
