--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -34,7 +34,7 @@ layout: default
   <div class="flex flex-col md:flex-row items-center">
     <div class="lg:w-1/3 md:w-1/2 mb-4 md:mb-0 flex-grow">
       <img
-        src="{{image}}"
+        src="{{image}}?nf_resize=fit&fm=auto"
         alt="Product Image"
         class="w-full h-96 rounded-lg object-cover"
         loading="lazy"
@@ -48,21 +48,21 @@ layout: default
   <div class="flex justify-center flex-wrap mt-8 gap-4">
     {% if image1 %}
     <img
-      src="{{ image1 }}"
+      src="{{ image1 }}?nf_resize=fit&fm=auto"
       alt="Product image"
       class="max-w-128 h-48 rounded-lg object-cover flex-grow"
       loading="lazy"
     />
     {% endif %} {% if image2 %}
     <img
-      src="{{ image2 }}"
+      src="{{ image2 }}?nf_resize=fit&fm=auto"
       alt="Product image"
       class="max-w-128 h-48 rounded-lg object-cover flex-grow"
       loading="lazy"
     />
     {% endif %} {% if image3 %}
     <img
-      src="{{ image3 }}"
+      src="{{ image3 }}?nf_resize=fit&fm=auto"
       alt="Product image"
       class="max-w-128 h-48 rounded-lg object-cover flex-grow"
       loading="lazy"
@@ -73,21 +73,21 @@ layout: default
   {% if image4 %}
   <div class="flex justify-center flex-wrap mt-4 gap-4">
     <img
-      src="{{ image4 }}"
+      src="{{ image4 }}?nf_resize=fit&fm=auto"
       alt="Product image"
       class="max-w-128 h-48 rounded-lg object-cover flex-grow"
       loading="lazy"
     />
     {% endif %} {% if image5 %}
     <img
-      src="{{ image5 }}"
+      src="{{ image5 }}?nf_resize=fit&fm=auto"
       alt="Product image"
       class="max-w-128 h-48 rounded-lg object-cover flex-grow"
       loading="lazy"
     />
     {% endif %} {% if image6 %}
     <img
-      src="{{ image6 }}"
+      src="{{ image6 }}?nf_resize=fit&fm=auto"
       alt="Product image"
       class="max-w-128 h-48 rounded-lg object-cover flex-grow"
       loading="lazy"
