--- a/src/_includes/partials/vehicle-section.html
+++ b/src/_includes/partials/vehicle-section.html
@@ -15,15 +15,13 @@
         {{ post.data.title | default('Untitled') }}
       </a>
     </h3>
-    <div class="text-gray-500 mb-4 flex flex-wrap gap-8">
+    <div class="text-gray-500 mb-2 border-b pb-2 flex flex-wrap gap-8">
       {% if post.data.price %}<span class="font-bold"
         >${{ post.data.price }}</span
       >{% endif %} {% if post.data.miles %}<span class="font-bold"
         >{{ post.data.miles }} miles</span
       >{% endif %}
-    </div>
-    <div class="text-xs text-gray-500 mb-3 border-b pb-2">
-      {% if post.date %}<span>{{ post.date | readableDate }}</span>{% endif %}
+
     </div>
     {% if post.data.description %}
     <p class="mb-3">
