--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -29,8 +29,8 @@ layout: default
   <div class="flex flex-col md:flex-row items-center">
     <div class="lg:w-1/3 md:w-1/2 mb-4 md:mb-0 flex-grow">
       <img
-        src="{{image}}?nf_resize=fit&fm=auto"
-        alt="Product Image"
+        src="{{image}}"
+        alt="Main Image for {{title}}"
         class="w-full h-96 rounded-lg object-cover"
         loading="lazy"
       />
@@ -43,23 +43,23 @@ layout: default
   <div class="flex justify-center flex-wrap mt-8 gap-4">
     {% if image1 %}
     <img
-      src="{{ image1 }}?nf_resize=fit&fm=auto"
-      alt="Product image"
-      class="max-w-128 h-48 rounded-lg object-cover flex-grow"
+      src="{{ image1 }}"
+      alt="{{title}}"
+      class="max-w-128 h-64 rounded-lg object-cover flex-grow"
       loading="lazy"
     />
     {% endif %} {% if image2 %}
     <img
-      src="{{ image2 }}?nf_resize=fit&fm=auto"
-      alt="Product image"
-      class="max-w-128 h-48 rounded-lg object-cover flex-grow"
+      src="{{ image2 }}"
+      alt="{{title}}"
+      class="max-w-128 h-64 rounded-lg object-cover flex-grow"
       loading="lazy"
     />
     {% endif %} {% if image3 %}
     <img
-      src="{{ image3 }}?nf_resize=fit&fm=auto"
-      alt="Product image"
-      class="max-w-128 h-48 rounded-lg object-cover flex-grow"
+      src="{{ image3 }}"
+      alt="{{title}}"
+      class="max-w-128 h-64 rounded-lg object-cover flex-grow"
       loading="lazy"
     />
     {% endif %}       
@@ -68,23 +68,23 @@ layout: default
   {% if image4 %}
   <div class="flex justify-center flex-wrap mt-4 gap-4">
     <img
-      src="{{ image4 }}?nf_resize=fit&fm=auto"
-      alt="Product image"
-      class="max-w-128 h-48 rounded-lg object-cover flex-grow"
+      src="{{ image4 }}"
+      alt="{{title}}"
+      class="max-w-128 h-64 rounded-lg object-cover flex-grow"
       loading="lazy"
     />
     {% endif %} {% if image5 %}
     <img
-      src="{{ image5 }}?nf_resize=fit&fm=auto"
-      alt="Product image"
-      class="max-w-128 h-48 rounded-lg object-cover flex-grow"
+      src="{{ image5 }}"
+      alt="{{title}}"
+      class="max-w-128 h-64 rounded-lg object-cover flex-grow"
       loading="lazy"
     />
     {% endif %} {% if image6 %}
     <img
-      src="{{ image6 }}?nf_resize=fit&fm=auto"
-      alt="Product image"
-      class="max-w-128 h-48 rounded-lg object-cover flex-grow"
+      src="{{ image6 }}"
+      alt="{{title}}"
+      class="max-w-128 h-64 rounded-lg object-cover flex-grow"
       loading="lazy"
     />   
     {% endif %}     
