--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -80,9 +80,17 @@ class="relative"
 </a>
 <ul
   x-show="isDropdownOpen"
-  class="lg:absolute lg:left-0 lg:top-full left-0 lg:w-36 w-full bg-white shadow-lg rounded-lg lg:block hidden"
+  class="lg:absolute lg:left-0 lg:top-full left-0  w-full bg-white shadow-lg rounded-lg lg:block hidden"
   :class="{ 'block': isDropdownOpen, 'hidden': !isDropdownOpen }"
 >
+<li>
+  <a
+    href="#"
+    class="block px-4 py-3 text-sm text-gray-700 hover:text-[#1E6CB0] border-b-2 border-gray-50"
+  >
+    Current Vehicles
+  </a>
+</li>
   <li>
     <a
       href="#"
