--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -85,7 +85,7 @@ class="relative"
 >
 <li>
   <a
-    href="#"
+    href="/vehicles"
     class="block px-4 py-3 text-sm text-gray-700 hover:text-[#1E6CB0] border-b-2 border-gray-50"
   >
     Current Vehicles
@@ -93,7 +93,7 @@ class="relative"
 </li>
   <li>
     <a
-      href="#"
+      href="/vehicles/coming-soon"
       class="block px-4 py-3 text-sm text-gray-700 hover:text-[#1E6CB0]"
     >
       Coming Soon
